force-app/main/default/objects/Retail_Asset__c/Retail_Asset__c.object-meta.xml
<CustomObject>
    <description>Outlet retail asset register (BRD 21.15 Assets). Tracks asset given to an outlet, status and presence.</description>
    <label>Retail Asset</label>
    <nameField>
        <label>Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Retail Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>