force-app/main/default/objects/Retail_Asset__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outlet</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Retail_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>