force-app/main/default/objects/Retail_Asset__c/fields/Asset_Present__c.field-meta.xml
<CustomField>
    <fullName>Asset_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asset Present</label>
    <type>Checkbox</type>
</CustomField>