force-app/main/default/objects/Retail_Asset__c/fields/Given_Date__c.field-meta.xml
<CustomField>
    <fullName>Given_Date__c</fullName>
    <label>Given Date</label>
    <type>Date</type>
</CustomField>