force-app/main/default/objects/Retail_Asset__c/validationRules/Status_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(Status__c))</errorConditionFormula>
    <errorMessage>Asset status is required (BRD 21.15).</errorMessage>
</ValidationRule>