force-app/main/default/objects/Retail_Asset__c/listViews/Active_Assets.listView-meta.xml
<ListView>
    <fullName>Active_Assets</fullName>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Retail_Asset__c.Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Assets</label>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Asset_Type__c</columns>
    <columns>Status__c</columns>
</ListView>